--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
+certifi==2020.6.20
+chardet==3.0.4
 cycler==0.10.0
-googletrans==2.2.0
-matplotlib==2.0.0
-numpy==1.12.1
-praw==4.4.0
-prawcore==0.8.0
-pyparsing==2.2.0
-python-dateutil==2.6.0
-pytz==2016.10
-requests==2.13.0
-six==1.10.0
-update-checker==0.16
+googletrans==3.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2020.7.7
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
+kiwisolver==1.2.0
+matplotlib==3.2.2
+numpy==1.19.0
+praw==7.1.0
+prawcore==1.4.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+requests==2.24.0
+rfc3986==1.4.0
+six==1.15.0
+sniffio==1.1.0
+update-checker==0.17
+urllib3==1.25.9
+websocket-client==0.57.0
